--- a/wtm/.classpath
+++ b/wtm/.classpath
@@ -32,5 +32,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/bg3"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
