--- a/wtm/pom.xml
+++ b/wtm/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>com.github.premganz</groupId>
 			<artifactId>bg3</artifactId>
-			<version>1.6.0</version>
+			<version>v1.6.1</version>
 		</dependency>
 <!-- 
 		<dependency>
