--- a/wtm/pom.xml
+++ b/wtm/pom.xml
@@ -40,6 +40,14 @@
 			<artifactId>bg3</artifactId>
 			<version>v1.4.9</version>
 		</dependency>-->
+		
+		<!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
+<dependency>
+    <groupId>org.mongodb</groupId>
+    <artifactId>mongo-java-driver</artifactId>
+    <version>3.5.0</version>
+</dependency>
+		
 	</dependencies>
 
 
