--- a/wtm/.classpath
+++ b/wtm/.classpath
@@ -27,7 +27,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/bg3"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/bg3"/>
 	<classpathentry kind="lib" path="/bg3/target/lib/activation-1.1.jar"/>
 	<classpathentry kind="lib" path="/bg3/target/lib/activemq-all-5.8.0.jar"/>
 	<classpathentry kind="lib" path="/bg3/target/lib/activemq-amqp-5.8.0.jar"/>
