--- a/wtm/pom.xml
+++ b/wtm/pom.xml
@@ -47,6 +47,14 @@
     <artifactId>mongo-java-driver</artifactId>
     <version>3.5.0</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.6</version>
+</dependency>
+
 		
 	</dependencies>
 
