--- a/wtm/.classpath
+++ b/wtm/.classpath
@@ -22,12 +22,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/bg3"/>
 	<classpathentry kind="lib" path="/bg3/target/lib/activation-1.1.jar"/>
 	<classpathentry kind="lib" path="/bg3/target/lib/activemq-all-5.8.0.jar"/>
 	<classpathentry kind="lib" path="/bg3/target/lib/activemq-amqp-5.8.0.jar"/>
@@ -99,6 +93,9 @@
 	<classpathentry kind="lib" path="/bg3/target/lib/unbescape-1.1.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="/bg3/target/lib/xml-apis-1.4.01.jar"/>
 	<classpathentry kind="lib" path="/bg3/target/lib/xmlbeans-2.3.0.jar"/>
-	<classpathentry kind="lib" path="target/lib/mongo-java-driver-3.5.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/bg3"/>
+	<classpathentry kind="lib" path="/bg3/target/lib/commons-lang3-3.6.jar"/>
+	<classpathentry kind="lib" path="/bg3/target/lib/mongo-java-driver-3.5.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
